@@ -7,6 +7,12 @@ Sat Jun  9 00:28:11 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
       does that for us
     + dselect/method.cc: handle interrupted getc in falliblesubprocess()
       prompt
+    + include/dpkg.h.in: add setcloexec declaration
+    + lib/mlib.c: add setcloexec(), utility function to set FD_CLOEXEC flag
+    + lib/dbmodify.c: use setcloexec() on status file
+    + main/filesdb.c: use setcloexec for diversions and statoverride files
+    + main/archives.c: add functions to initialize and destroy the obstack,
+      ensure obstack is initialized in try_remove_can() as well
 
 Fri Jun  8 19:42:43 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
